decaf/Frontend/DecafParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./decaf/Frontend/DecafParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

#pragma warning disable 3021
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class DecafParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BOOLEAN=1, CALLOUT=2, CLASS=3, ELSE=4, EXTENDS=5, FALSE=6, IF=7, INT=8, 
		NEW=9, NULL=10, RETURN=11, THIS=12, TRUE=13, VOID=14, WHILE=15, WSS=16, 
		COMMENTS=17, NEWLINE=18, LPAREN=19, RPAREN=20, LBRACE=21, RBRACE=22, LBRACK=23, 
		RBRACK=24, SEMI=25, COMMA=26, DOT=27, NOT=28, PLUS=29, MINUS=30, MULT=31, 
		DIV=32, LEQ=33, GEQ=34, GT=35, LT=36, EQ=37, NEQ=38, AND=39, OR=40, ASSIGN=41, 
		STRINGLIT=42, CHARLIT=43, INTLIT=44, ID=45;
	public const int
		RULE_program = 0, RULE_class_decl = 1, RULE_var_decl = 2, RULE_var_bind_list = 3, 
		RULE_var_bind = 4, RULE_method_decl = 5, RULE_method_decl_param_list = 6, 
		RULE_method_decl_param = 7, RULE_block = 8, RULE_type = 9, RULE_statement = 10, 
		RULE_assign_stmt = 11, RULE_expression_stmt = 12, RULE_if_stmt = 13, RULE_while_stmt = 14, 
		RULE_return_stmt = 15, RULE_call_expr = 16, RULE_method_call = 17, RULE_method_call_args = 18, 
		RULE_prim_callout = 19, RULE_prim_callout_args = 20, RULE_expr = 21, RULE_simple_expr = 22, 
		RULE_location = 23, RULE_location_path = 24, RULE_location_array_index = 25, 
		RULE_bin_op = 26, RULE_arith_op = 27, RULE_rel_op = 28, RULE_eq_op = 29, 
		RULE_cond_op = 30, RULE_literal = 31, RULE_bool_literal = 32;
	public static readonly string[] ruleNames = {
		"program", "class_decl", "var_decl", "var_bind_list", "var_bind", "method_decl", 
		"method_decl_param_list", "method_decl_param", "block", "type", "statement", 
		"assign_stmt", "expression_stmt", "if_stmt", "while_stmt", "return_stmt", 
		"call_expr", "method_call", "method_call_args", "prim_callout", "prim_callout_args", 
		"expr", "simple_expr", "location", "location_path", "location_array_index", 
		"bin_op", "arith_op", "rel_op", "eq_op", "cond_op", "literal", "bool_literal"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "';'", "','", "'.'", "'!'", "'+'", "'-'", "'*'", "'/'", 
		"'<='", "'>='", "'>'", "'<'", "'=='", "'!='", "'&&'", "'||'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BOOLEAN", "CALLOUT", "CLASS", "ELSE", "EXTENDS", "FALSE", "IF", 
		"INT", "NEW", "NULL", "RETURN", "THIS", "TRUE", "VOID", "WHILE", "WSS", 
		"COMMENTS", "NEWLINE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
		"RBRACK", "SEMI", "COMMA", "DOT", "NOT", "PLUS", "MINUS", "MULT", "DIV", 
		"LEQ", "GEQ", "GT", "LT", "EQ", "NEQ", "AND", "OR", "ASSIGN", "STRINGLIT", 
		"CHARLIT", "INTLIT", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DecafParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DecafParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DecafParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DecafParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Class_declContext[] class_decl() {
			return GetRuleContexts<Class_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Class_declContext class_decl(int i) {
			return GetRuleContext<Class_declContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 66;
				class_decl();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Class_declContext : ParserRuleContext {
		public IToken name;
		public IToken superClassName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLASS() { return GetToken(DecafParser.CLASS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(DecafParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(DecafParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(DecafParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(DecafParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXTENDS() { return GetToken(DecafParser.EXTENDS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Var_declContext[] var_decl() {
			return GetRuleContexts<Var_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Var_declContext var_decl(int i) {
			return GetRuleContext<Var_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Method_declContext[] method_decl() {
			return GetRuleContexts<Method_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Method_declContext method_decl(int i) {
			return GetRuleContext<Method_declContext>(i);
		}
		public Class_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class_decl; } }
	}

	[RuleVersion(0)]
	public Class_declContext class_decl() {
		Class_declContext _localctx = new Class_declContext(Context, State);
		EnterRule(_localctx, 2, RULE_class_decl);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(CLASS);
			State = 72;
			_localctx.name = Match(ID);
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EXTENDS) {
				{
				State = 73;
				Match(EXTENDS);
				State = 74;
				_localctx.superClassName = Match(ID);
				}
			}

			State = 77;
			Match(LBRACE);
			State = 81;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 78;
					var_decl();
					}
					} 
				}
				State = 83;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184372105474L) != 0)) {
				{
				{
				State = 84;
				method_decl();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_declContext : ParserRuleContext {
		public TypeContext typ;
		public Var_bind_listContext binds;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(DecafParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Var_bind_listContext var_bind_list() {
			return GetRuleContext<Var_bind_listContext>(0);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_decl; } }
	}

	[RuleVersion(0)]
	public Var_declContext var_decl() {
		Var_declContext _localctx = new Var_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_var_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			_localctx.typ = type();
			State = 93;
			_localctx.binds = var_bind_list();
			State = 94;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_bind_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Var_bindContext[] var_bind() {
			return GetRuleContexts<Var_bindContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Var_bindContext var_bind(int i) {
			return GetRuleContext<Var_bindContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(DecafParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(DecafParser.COMMA, i);
		}
		public Var_bind_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_bind_list; } }
	}

	[RuleVersion(0)]
	public Var_bind_listContext var_bind_list() {
		Var_bind_listContext _localctx = new Var_bind_listContext(Context, State);
		EnterRule(_localctx, 6, RULE_var_bind_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			var_bind();
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 97;
				Match(COMMA);
				State = 98;
				var_bind();
				}
				}
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_bindContext : ParserRuleContext {
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DecafParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK() { return GetToken(DecafParser.LBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK() { return GetToken(DecafParser.RBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTLIT() { return GetToken(DecafParser.INTLIT, 0); }
		public Var_bindContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_bind; } }
	}

	[RuleVersion(0)]
	public Var_bindContext var_bind() {
		Var_bindContext _localctx = new Var_bindContext(Context, State);
		EnterRule(_localctx, 8, RULE_var_bind);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			_localctx.name = Match(ID);
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBRACK) {
				{
				State = 105;
				Match(LBRACK);
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==INTLIT) {
					{
					State = 106;
					Match(INTLIT);
					}
				}

				State = 109;
				Match(RBRACK);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Method_declContext : ParserRuleContext {
		public TypeContext returnType;
		public IToken name;
		public Method_decl_param_listContext parameters;
		public BlockContext body;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(DecafParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(DecafParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DecafParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Method_decl_param_listContext method_decl_param_list() {
			return GetRuleContext<Method_decl_param_listContext>(0);
		}
		public Method_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_method_decl; } }
	}

	[RuleVersion(0)]
	public Method_declContext method_decl() {
		Method_declContext _localctx = new Method_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_method_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			_localctx.returnType = type();
			State = 113;
			_localctx.name = Match(ID);
			State = 114;
			Match(LPAREN);
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184372105474L) != 0)) {
				{
				State = 115;
				_localctx.parameters = method_decl_param_list();
				}
			}

			State = 118;
			Match(RPAREN);
			State = 119;
			_localctx.body = block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Method_decl_param_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Method_decl_paramContext[] method_decl_param() {
			return GetRuleContexts<Method_decl_paramContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Method_decl_paramContext method_decl_param(int i) {
			return GetRuleContext<Method_decl_paramContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(DecafParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(DecafParser.COMMA, i);
		}
		public Method_decl_param_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_method_decl_param_list; } }
	}

	[RuleVersion(0)]
	public Method_decl_param_listContext method_decl_param_list() {
		Method_decl_param_listContext _localctx = new Method_decl_param_listContext(Context, State);
		EnterRule(_localctx, 12, RULE_method_decl_param_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			method_decl_param();
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 122;
				Match(COMMA);
				State = 123;
				method_decl_param();
				}
				}
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Method_decl_paramContext : ParserRuleContext {
		public TypeContext typ;
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DecafParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK() { return GetToken(DecafParser.LBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK() { return GetToken(DecafParser.RBRACK, 0); }
		public Method_decl_paramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_method_decl_param; } }
	}

	[RuleVersion(0)]
	public Method_decl_paramContext method_decl_param() {
		Method_decl_paramContext _localctx = new Method_decl_paramContext(Context, State);
		EnterRule(_localctx, 14, RULE_method_decl_param);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			_localctx.typ = type();
			State = 130;
			_localctx.name = Match(ID);
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBRACK) {
				{
				State = 131;
				Match(LBRACK);
				State = 132;
				Match(RBRACK);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(DecafParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(DecafParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Var_declContext[] var_decl() {
			return GetRuleContexts<Var_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Var_declContext var_decl(int i) {
			return GetRuleContext<Var_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			Match(LBRACE);
			State = 139;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 136;
					var_decl();
					}
					} 
				}
				State = 141;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
			}
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184374220932L) != 0)) {
				{
				{
				State = 142;
				statement();
				}
				}
				State = 147;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 148;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
	 
		public TypeContext() { }
		public virtual void CopyFrom(TypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class VoidTypeContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOID() { return GetToken(DecafParser.VOID, 0); }
		public VoidTypeContext(TypeContext context) { CopyFrom(context); }
	}
	public partial class CustomTypeContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DecafParser.ID, 0); }
		public CustomTypeContext(TypeContext context) { CopyFrom(context); }
	}
	public partial class BooleanTypeContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOLEAN() { return GetToken(DecafParser.BOOLEAN, 0); }
		public BooleanTypeContext(TypeContext context) { CopyFrom(context); }
	}
	public partial class IntTypeContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(DecafParser.INT, 0); }
		public IntTypeContext(TypeContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 18, RULE_type);
		try {
			State = 154;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
				_localctx = new IntTypeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 150;
				Match(INT);
				}
				break;
			case BOOLEAN:
				_localctx = new BooleanTypeContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 151;
				Match(BOOLEAN);
				}
				break;
			case VOID:
				_localctx = new VoidTypeContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 152;
				Match(VOID);
				}
				break;
			case ID:
				_localctx = new CustomTypeContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 153;
				Match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class IfStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public If_stmtContext if_stmt() {
			return GetRuleContext<If_stmtContext>(0);
		}
		public IfStatementContext(StatementContext context) { CopyFrom(context); }
	}
	public partial class ExpressionStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Expression_stmtContext expression_stmt() {
			return GetRuleContext<Expression_stmtContext>(0);
		}
		public ExpressionStatementContext(StatementContext context) { CopyFrom(context); }
	}
	public partial class ReturnStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Return_stmtContext return_stmt() {
			return GetRuleContext<Return_stmtContext>(0);
		}
		public ReturnStatementContext(StatementContext context) { CopyFrom(context); }
	}
	public partial class BlockStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public BlockStatementContext(StatementContext context) { CopyFrom(context); }
	}
	public partial class WhileStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public While_stmtContext while_stmt() {
			return GetRuleContext<While_stmtContext>(0);
		}
		public WhileStatementContext(StatementContext context) { CopyFrom(context); }
	}
	public partial class AssignStatementContext : StatementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Assign_stmtContext assign_stmt() {
			return GetRuleContext<Assign_stmtContext>(0);
		}
		public AssignStatementContext(StatementContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 20, RULE_statement);
		try {
			State = 162;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				_localctx = new AssignStatementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 156;
				assign_stmt();
				}
				break;
			case 2:
				_localctx = new ExpressionStatementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 157;
				expression_stmt();
				}
				break;
			case 3:
				_localctx = new IfStatementContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 158;
				if_stmt();
				}
				break;
			case 4:
				_localctx = new WhileStatementContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 159;
				while_stmt();
				}
				break;
			case 5:
				_localctx = new ReturnStatementContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 160;
				return_stmt();
				}
				break;
			case 6:
				_localctx = new BlockStatementContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 161;
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assign_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LocationContext location() {
			return GetRuleContext<LocationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(DecafParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(DecafParser.SEMI, 0); }
		public Assign_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assign_stmt; } }
	}
